--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="images/logo-felipe.jpg" alt="Logo com o nome Felipe">
+                    <img src="images/standard.gif" alt="Logo com o nome Felipe">
                 </a>
             </div><!--logo-->
 
@@ -91,14 +91,22 @@
 
                     <div class="txt-sobre">
                         <h2>MUITO PRAZER, <span>SOU FELIPE ALVES</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat reprehenderit ratione quibusdam. Quo, necessitatibus eligendi? Quo aut amet tempora, tenetur autem ea quasi asperiores a harum quaerat, dolores consequuntur eaque.</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, pariatur inventore nihil assumenda natus fugiat molestiae culpa facilis eum, ipsam, aspernatur maiores neque omnis voluptas! Illo, alias? Reiciendis, nam dicta.</p>
+                        <p>Olá, me chamo Felipe, sou um adolescente de 16 anos que no meio de 2023 conheceu o mundo da programação. Fiquei impressionado com tudo que podia ser feito com a programação, me interessei bastante e comecei pelo HTML5 e CSS3 no Curso em Vídeo. Nesse período, fiquei sem computador, pois meu notebook infelizmente quebrou. Era um notebook muito velho que não valia a pena consertar.</p>
+                        <p>Desde fevereiro de 2024, retornei às atividades com um novo PC. Confesso que desde então enrolei um pouco no meu percurso kkkkk, mas agora estou totalmente focado e com muita vontade de aprender. Pretendo seguir minha carreira como um desenvolvedor Full Stack, trabalhando com diversas linguagens de programação.</p>
+                        <h2>MEUS <span>OBJETIVOS</span></h2>
+                        <p>Nos próximos meses, quero me aprofundar no HTML5, CSS3 e JavaScript. Estou ansioso para começar a trabalhar em projetos práticos e colocar em prática tudo que estou aprendendo. Meu objetivo é aprender bastante o básico para, com isso, estar pronto para explorar tecnologias mais complexas no futuro.</p>
+                        <h2>PROJETOS E <span>APRENDIZADOS</span></h2>
+                        <p>Atualmente, estou desenvolvendo um site pessoal para praticar minhas habilidades em HTML e CSS. Também planejo criar pequenos projetos, como calculadoras e jogos básicos com JavaScript, para aprimorar meus conhecimentos.</p>
+                        <h2>MOTIVAÇÕES E <span>INSPIRAÇÕES</span></h2>
+                        <p>O que mais me motiva na programação é a possibilidade de criar soluções inovadoras que podem impactar positivamente a vida das pessoas. Sou inspirado por grandes desenvolvedores que começaram do zero e hoje são referências na área.</p>
+                        <p>Deseja falar comigo ou me conhecer melhor? Clique abaixo em algumas das minhas redes sociais e entre em contato.</p>
 
                         <div class="btn-social">
                             <a href="https://github.com/felipe7xx" target="_blank"><button><i class="bi bi-github"></i></button></a>
                             <a href="https://www.instagram.com/swag7xx/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
                             <a href="https://www.youtube.com/channel/UCK7-kqRzRhNDwRKbsdGPLaQ" target="_blank"><button><i class="bi bi-youtube"></i></button></a>
                             <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                            
                         </div><!--btn-social-->
                     </div><!--txt-sobre-->
                 </div><!--flex-->
@@ -110,31 +118,17 @@
                 <h2 class="titulo">MEU <span>PORTFÓLIO</span></h2>
                 <div class="flex">
                     <div class="img-port" style="background-image: url('images/imagem.jpg');">
-                        <div class="oveerlay"> Projeto 1</div>
+                        <div class="oveerlay">Sem projeto ainda</div>
                     </div>
                     <div class="img-port" style="background-image: url('images/imagem.jpg');">
-                        <div class="oveerlay">Projeto 2</div>
+                        <div class="oveerlay">Sem projeto ainda</div>
                     </div>
                     <div class="img-port" style="background-image: url('images/imagem.jpg');">
-                        <div class="oveerlay">Projeto 3</div>
+                        <div class="oveerlay">Sem projeto ainda</div>
                     </div>
                 </div><!--flex--> 
             </div><!--interface-->
         </section><!--portfolio-->
-
-        <section class="formulario">
-            <div class="interface">
-                <h2 class="titulo">FALE <span>COMIGO.</span></h2>
-
-                <form method="post" action="email.php">
-                    <input type="text" name="nome" id="" placeholder="Seu Nome:" required>
-                    <input type="text" name="email" id="" placeholder="Seu Email:" required>
-                    <input type="text" name="telefone" id="" placeholder="Seu Telefone:">
-                    <textarea name="" id="" placeholder="Sua Mensagem:" required></textarea>
-                    <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
-                </form>
-            </div><!--interface-->
-        </section><!--formulario-->
     </main>
 
     <footer>
@@ -142,7 +136,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/logo-felipe.jpg" alt="logo">
+                        <img src="images/standard.gif" alt="logo">
                     </div>
                     <div class="btn-social">
                         <a href="https://github.com/felipe7xx" target="_blank"><button><i class="bi bi-github"></i></button></a>
@@ -153,6 +147,7 @@
                 </div>
             <div class="line-footer borda">
                 <p><i class="bi bi-envelope-at-fill"></i> <a href="mailto:contatofalipe7xx@gmail.com">contatofalipe7xx@gmail.com</a></p>
+                <p class="contatoemail">Deseja falar comigo ? Clique no Email acima e me envie sua mensagem.</p>
             </div><!--line footer-->
         </div><!--interface-->
     </footer>
