--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="images/standard.gif" alt="Logo com o nome Felipe">
+                    <img src="images/logo-felipe.jpg" alt="Logo com o nome Felipe">
                 </a>
             </div><!--logo-->
 
