--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/standard.gif" alt="logo">
+                        <img src="images/logo-felipe.jpg" alt="logo">
                     </div>
                     <div class="btn-social">
                         <a href="https://github.com/felipe7xx" target="_blank"><button><i class="bi bi-github"></i></button></a>
